added dark mode feature

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="theme">
+        <button ><img src="./images/moonIcon.png" alt="moon-symbol"/></button>
+    </div>
     <div class="card">
 
         <div class="search">
